--- a/src/main/resources/templates/orders/order.html
+++ b/src/main/resources/templates/orders/order.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/custom.css}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css"
+          integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>Spring Crud</title>
 </head>
 <body>
-
+<div class="centered flex-column">
+    <div class="ui raised segment">
+        <div><strong>ID : </strong>
+            <span th:text="${order.id}"></span></div>
+        <br>
+        <div><strong>Name: </strong>
+            <span th:text="${order.name}"></span></div>
+        <br>
+        <div><strong>Stock: </strong>
+            <span th:text="${product.stock}"></span></div>
+        <br>
+        <div><strong>Price: </strong>
+            <span th:text="${product.price}"></span></div>
+    </div>
+    <br>
+    <div class="centered">
+        <a class="ui blue button" th:href="@{'/products/update/' + ${product.sku}}">Update</a>
+        <a class="ui grey button" th:href="@{/products/}">Go Back</a>
+    </div>
+</div>
+<div class="ui grey button" onclick="handleLogout()">
+    <i class="ui sign out alternate icon"></i>
+    Logout
+</div>
+<form method="post" th:action="@{/logout}" hidden>
+    <input type="submit" id="logoutButton"/>
+</form>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
 </body>
 </html>
