--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -1,10 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/products.css}"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.5.0/semantic.min.css"
+          integrity="sha512-KXol4x3sVoO+8ZsWPFI/r5KBVB/ssCGB5tsv2nVOKwLg33wTFP3fmnXa47FdSVIshVTgsYk/1734xSk9aFIa4A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>Spring Crud</title>
 </head>
 <body>
+<div id="main_div">
+    <table class="ui basic table">
+        <caption>All Users</caption>
+        <thead>
+        <tr>
+            <th>Username</th>
+            <th>Role</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.username}"></td>
+            <td th:text="${user.authority}"></td>
+            <td>
+                <div style="display: flex; text-align: center; justify-content: flex-start; align-items: flex-start;">
+                    <a class="ui green button" th:href="@{'/users/' + ${user.username}}">
+                        <i class="ui eye icon"></i>
+                    </a>
+                    <a class="ui blue button" th:href="@{'/users/update/' + ${user.username}}">
+                        <i class="ui edit icon"></i>
+                    </a>
+                    <span class="ui red button" th:data-id="${user.username}" th:data-name="${user.username}"
+                          onclick="handleDelete(this.getAttribute('data-id'), this.getAttribute('data-name'))">
+                        <i class="ui trash icon"></i>
+                    </span>
+                    <form th:action="@{'/users/delete/' + ${user.username}}" method="post" hidden>
+                        <input type="hidden" name="_method" value="delete"/>
+                        <input type="submit" id="deleteSubmit" hidden/>
+                    </form>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <br>
+    <div>
+        <a class="ui teal button" th:href="@{/users/save}" target="_self">Add User</a>
+    </div>
+    <br>
+    <div class="ui grey button" onclick="handleLogout()">
+        <i class="ui sign out alternate icon"></i>
+        Logout
+    </div>
+    <form method="post" th:action="@{/logout}" hidden>
+        <input type="submit" id="logoutButton"/>
+    </form>
+</div>
+<script type="text/javascript">
+    function handleDelete(id, name) {
+        let confirmed = confirm("Delete User " + name + "?");
 
+        if (confirmed) {
+            document.getElementById("deleteSubmit").click();
+        }
+    }
+</script>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
 </body>
 </html>
